--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
 									<img src="images/logo-blau.svg" alt="Blau Cianotipia" width="140" class="logo"  />
 									<h1 class="major" hidden>Blau Cianotipia</h1>
-									<p>Cyanotype is an old photographic process that produces a Prussian blue print due the reaction of iron sats to light sensitivity. </p>
-									<p>During the process, no kind of ink is used to obtain the image, but it is the light that, when coming into contact with the sensitized paper through a negative, forms the image by a chemical reaction.</p>
-									<p>Blau is a project of botanical prints made from real plants using cyanotype as the printing process </p>
+									<p>The <strong>Cyanotype</strong> process is an old photographic process that produces a Prussian blue print due the reaction of iron sats to light sensitivity. </p>
+									<p>During the process, <strong>no kind of ink is used to obtain the image</strong>, but it is the light that, when coming into contact with the sensitized paper through a negative, <strong>forms the image by a chemical reaction.</strong></p>
+									<p><strong>Blau</strong> is a project of <strong>botanical prints</strong> made from real plants using cyanotype as the printing process </p>
 
 
 									<ul class="actions">
@@ -44,11 +44,11 @@
 							<section class="panel spotlight large left" id="first">
 								<div class="content span-5">
 									<h2 class="major">Anna Atkins</h2>
-									<p>The cyanotype process was discovered in 1842 by the astronomer John Herschel, but it was the botanic Anna Atkins who used the technique in 1843 to edit and self-publish an illustrated book series about algae species. </p>
+									<p>The <strong>cyanotype process</strong> was discovered in <strong>1842</strong> by the astronomer <strong>John Herschel</strong>, but it was <strong>the botanic Anna Atkins who used the technique in 1843 to edit and self-publish an illustrated book series about algae species.</strong> </p>
 
-									<p>She needed to reproduce the details of the different species. The cyanotype process allowed her to achieve that by creating the photograms from the plants itself, thus illustrating the scientific species in the most objective way, greatly surpassing the expectation for that period in time. Her work went beyond the scientific field, adding value to the arts and aesthetic disciplines.</p>
+									<p>She needed to reproduce the details of the different species. The cyanotype process allowed her to achieve that by <strong>creating the photograms from the plants itself</strong>, thus illustrating the scientific species in the most objective way, greatly surpassing the expectation for that period in time. <strong>Her work went beyond the scientific field, adding value to the arts and aesthetic disciplines.</strong></p>
 
-									<p>Her book <a href="https://digitalcollections.nypl.org/collections/photographs-of-british-algae-cyanotype-impressions" target="_blank">British Algae: Cyanotype Impressions</a> it's consider the first photographic book and, Anna Atkins, the first woman photographer.</p>
+									<p>Her book <strong><a href="https://digitalcollections.nypl.org/collections/photographs-of-british-algae-cyanotype-impressions" target="_blank">British Algae: Cyanotype Impressions</a></strong> it's consider the first photographic book and, Anna Atkins, the <strong>first woman photographer.</strong></p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
 									<img src="images/pic03.jpg" alt="" />
@@ -58,22 +58,12 @@
 						<!-- Panel -->
 							<section class="panel">
 								<div class="intro color4">
-									<h2 class="major">Blau</h2>
-									<p>Blau cianotipia is my homage to the cyanotype process and Anna Atkins.</p>
+									<h2 class="major">The Cyanotypes</h2>
+									<p>Blau cianotipia is my homage to <strong>the cyanotype process and Anna Atkins.</strong></p>
 									<p>It's about nature and complex but yet simple things. </p>
-									<p>I use real plants to make my prints. Walking around and looking at what is already there and is only discovered by being present.
-									</p>
-									<p>Blau is a project about life as it is. </p>
-									<!-- <h3 class="major">Shows</h3>
-									<ul>
-										<li>2019. Perenne. Huella Botánica curated by Ether Arts Projects. Solo Show</li>
-										<li>2018. Vivarium. Huella Botánica curated by Ether Arts Projects. Group Show</li>
-										<li>2017. NATURALEZA y CIANOTIPIA
-En homenaje a Anna Atkins.
-Argentina - México - Chile - Uruguay - Brasil - Ucrania
-Un proyecto de Alejandra Marin y Natalia Monserrat.
-Curaduría: Jorgelina López, Alejandra Marin y Natalia Monserrat.</li>
-									</ul> -->
+									<p>I use real plants to make my prints. Walking around and looking at what is already there and <strong>is only discovered by being present.</strong></p>
+									<p><strong>Blau</strong> is a project about life as it is. </p>
+
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
@@ -171,12 +161,24 @@ Curaduría: Jorgelina López, Alejandra Marin y Natalia Monserrat.</li>
 
 						<!-- Panel -->
 							<section class="panel color4-alt">
+								<div class="intro color5">
+									<h3 class="major">Shows</h3>
+									<ul >
+										<li><strong>2019</strong>. "Perenne" at Huella Botánica curated by Ether Arts Projects.<br>(Solo show)</li>
+										<li><strong>2018</strong>. "Vivarium" at Huella Botánica curated by Ether Arts Projects.<br>(Group show)</li>
+										<li><strong>2017</strong>. "Naturaleza y cianotipia".(Group show)<br>
+											Homage to Anna Atkins.
+												Argentina - México - Chile - Uruguay - Brasil - Ucrania
+												A project by Alejandra Marin and Natalia Monserrat.
+												Curated by: Jorgelina López, Alejandra Marin and Natalia Monserrat.</li>
+										</ul>
+								</div>
 								<div class="intro color4">
 									<h2 class="major">Contact</h2>
-									<p>Hi! I am Paula Guagliardi.</p>
-									<p>I loved the cyanotype process since the first time I saw a print from Anna Atkins, then I learned the technique and definitely fell for it. Hope some of this inspire you to learn more about the process and Anna Atkins. </p>
-									<p>Feel free to <a href="mailto:blau@cianotipia.com">reach out</a> about information, collaborations or custom works.</p>
-									<p>You can also follow the project on Instagram <a class="icon brands fa-instagram" href="https:www.instagram.com/blau.cianotipia/"> blau.cianotipia</a></p>
+									<p>Hi! My name is Paula Guagliardi.</p>
+									<p>I loved the <strong>cyanotype process</strong> since the first time I saw a print from <strong>Anna Atkins</strong>, then I learned the technique and definitely fell for it. I Hope some of this inspire you to learn more about the process and <strong>Anna Atkins.</strong> </p>
+									<p>Feel free to <a href="mailto:paula.gdi@gmail.com">reach out</a> about information, collaborations or commissions.</p>
+									<p>You can also follow the project on<br><a class="icon brands fa-instagram" href="https:www.instagram.com/blau.cianotipia/"> blau.cianotipia</a></p>
 								</div>
 								<div class="inner columns divided color4">
 
