--- a/cyanotype-process.html
+++ b/cyanotype-process.html
@@ -47,7 +47,7 @@
 			<p>You can also follow the project on <a class="icon-text" href="https://www.instagram.com/blau.cianotipia/">Instagram</a> or visit my shop on <a class="icon-text" href="https://www.etsy.com/shop/BlauCianotipia"> Etsy</a>.</p>
 		</div>
 
-		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+		<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
     <!-- load cubeportfolio -->
     <script type="text/javascript" src="js/jquery.cubeportfolio.min.js"></script>
     <!-- init cubeportfolio -->
