added photo copyright link

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 				<ul class="mainNav">
 					<li><a href="index.html">Cyanotypes</a></li>
 					<li><a href="cyanotype-process.html">The Cyanotype Process</a></li>
-					<li><a href="about.html">About</a></li>
+					<li><a href="about.html" class="active">About</a></li>
 				</ul>
 			</nav>
 			<div class="mainContent">
