--- a/ajax-lightbox-gallery/cedrus_deodara.html
+++ b/ajax-lightbox-gallery/cedrus_deodara.html
@@ -6,7 +6,7 @@
                     <a href="images/botanical/cedrus_deodara-50x60_2019_prod.jpg" class="cbp-lightbox">
                         <img src="images/botanical/cedrus_deodara-50x60_2019_prod-thumb.jpg" alt="Cedrus deodara - Botanical Collection">
                     </a>
-                    <span class="photoCopy">Photo by <a href="#" target="_blank">Fenne Buitenrust Hettema</a></span>
+                    <span class="photoCopy">Photo by <a href="https://www.instagram.com/fibh.photo/" target="_blank">Fenne Buitenrust Hettema</a></span>
                 </li>
                 <li class="cbp-slider-item">
                     <a href="images/botanical/cedrus_deodara-50x60_2019.jpg" class="cbp-lightbox">
