--- a/ajax-lightbox-gallery/threads_XXIV.html
+++ b/ajax-lightbox-gallery/threads_XXIV.html
@@ -6,7 +6,7 @@
                     <a href="images/summer/threads_XXIV_a3_2020_prod.jpg" class="cbp-lightbox">
                         <img src="images/summer/threads_XXIV_a3_2020_prod-thumb.jpg" alt="">
                     </a>
-                    <span class="photoCopy">Photo by <a href="#" target="_blank">Fenne Buitenrust Hettema</a></span>
+                    <span class="photoCopy">Photo by <a href="https://www.instagram.com/fibh.photo/" target="_blank">Fenne Buitenrust Hettema</a></span>
                 </li>
                 <li class="cbp-slider-item">
                     <a href="images/summer/threads_XXIV_a3_2020_framed.jpg" class="cbp-lightbox">
