--- a/ajax-lightbox-gallery/small_branch.html
+++ b/ajax-lightbox-gallery/small_branch.html
@@ -6,7 +6,7 @@
                     <a href="images/botanical/small_branch-24x35-2019_framed.jpg" class="cbp-lightbox">
                         <img src="images/botanical/small_branch-24x35-2019_framed-thumb.jpg" alt="Small Branch - Botanical Collection">
                     </a>
-                    <span class="photoCopy">Photo by <a href="#" target="_blank">Fenne Buitenrust Hettema</a></span>
+                    <span class="photoCopy">Photo by <a href="https://www.instagram.com/fibh.photo/" target="_blank">Fenne Buitenrust Hettema</a></span>
                 </li>
                 <li class="cbp-slider-item">
                     <a href="images/botanical/small_branch-24x35-2019.jpg" class="cbp-lightbox">
