--- a/gallery/branch.html
+++ b/gallery/branch.html
@@ -6,7 +6,7 @@
                     <a href="images/botanical/branch-50x65-2019_prod.jpg" class="cbp-lightbox">
                         <img src="images/botanical/branch-50x65-2019_prod-thumb.jpg" alt="Branch - Botanical Collection">
                     </a>
-                    <span class="photoCopy">Photo by <a href="#" target="_blank">Fenne Buitenrust Hettema</a></span>
+                    <span class="photoCopy">Photo by <a href="https://www.instagram.com/fibh.photo/" target="_blank">Fenne Buitenrust Hettema</a></span>
                 </li>
                 <li class="cbp-slider-item">
                     <a href="images/botanical/branch-50x65-2019.jpg" class="cbp-lightbox">
