--- a/gallery/gramineae_II.html
+++ b/gallery/gramineae_II.html
@@ -6,13 +6,13 @@
                     <a href="images/botanical/gramineae_II-17x24-2019_prod.jpg" class="cbp-lightbox">
                         <img src="images/botanical/gramineae_II-17x24-2019_prod-thumb.jpg" alt="Gramineae II - Botanical Collection">
                     </a>
-                    <span class="photoCopy">Photo by <a href="#" target="_blank">Fenne Buitenrust Hettema</a></span>
+                    <span class="photoCopy">Photo by <a href="https://www.instagram.com/fibh.photo/" target="_blank">Fenne Buitenrust Hettema</a></span>
                 </li>
                 <li class="cbp-slider-item">
                     <a href="images/botanical/gramineae_II-17x24-2019_prod2.jpg" class="cbp-lightbox">
                         <img src="images/botanical/gramineae_II-17x24-2019_prod2-thumb.jpg" alt="Gramineae II - Botanical Collection">
                     </a>
-                    <span class="photoCopy">Photo by <a href="#" target="_blank">Fenne Buitenrust Hettema</a></span>
+                    <span class="photoCopy">Photo by <a href="https://www.instagram.com/fibh.photo/" target="_blank">Fenne Buitenrust Hettema</a></span>
                 </li>
                 <li class="cbp-slider-item">
                     <a href="images/botanical/gramineae_II-17x24-2019_framed.jpg" class="cbp-lightbox">
