--- a/gallery/wetcyan_II.html
+++ b/gallery/wetcyan_II.html
@@ -11,7 +11,7 @@
                     <a href="images/wet/wetcyan_II-50x70_2020_prod.jpg" class="cbp-lightbox">
                         <img src="images/wet/wetcyan_II-50x70_2020_prod-thumb.jpg" alt="Wet cyanotype II - Wet Cyanotypes Collection">
                     </a>
-                    <span class="photoCopy">Photo by <a href="#" target="_blank">Fenne Buitenrust Hettema</a></span>
+                    <span class="photoCopy">Photo by <a href="https://www.instagram.com/fibh.photo/" target="_blank">Fenne Buitenrust Hettema</a></span>
                 </li>
                 <li class="cbp-slider-item">
                     <a href="images/wet/wetcyan_II-50x70_2020.jpg" class="cbp-lightbox">
