--- a/gallery/wetcyan_VI.html
+++ b/gallery/wetcyan_VI.html
@@ -6,7 +6,7 @@
                     <a href="images/wet/wetcyan_VI-24x35_2019_prod.jpg" class="cbp-lightbox">
                         <img src="images/wet/wetcyan_VI-24x35_2019_prod-thumb.jpg" alt="Wet cyanotype VI - Wet Cyanotypes Collection">
                     </a>
-                    <span class="photoCopy">Photo by <a href="#" target="_blank">Fenne Buitenrust Hettema</a></span>
+                    <span class="photoCopy">Photo by <a href="https://www.instagram.com/fibh.photo/" target="_blank">Fenne Buitenrust Hettema</a></span>
                 </li>
                 <li class="cbp-slider-item">
                     <a href="images/wet/wetcyan_VI-24x35_2019.jpg" class="cbp-lightbox">
