add link cedrus

--- a/ajax-lightbox-gallery/cedrus_deodara.html
+++ b/ajax-lightbox-gallery/cedrus_deodara.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="cbp-l-inline-view-wrap">
-            <a href="#" target="_blank" class="cbp-l-inline-view">Purchase</a>
+            <a href="https://www.etsy.com/listing/901422895/cyanotype-original-art-botanical-print" target="_blank" class="cbp-l-inline-view">Purchase</a>
         </div>
     </div>
 </div>
