change euros from back to front

--- a/ajax-lightbox-gallery/threads_V.html
+++ b/ajax-lightbox-gallery/threads_V.html
@@ -24,7 +24,7 @@
 
     <div class="cbp-l-inline-right">
         <div class="cbp-l-inline-title">Threads V</div>
-        <div class="cbp-l-inline-subtitle">50€</div>
+        <div class="cbp-l-inline-subtitle">€50</div>
 
         <div class="cbp-l-inline-desc">
           <p>Original cyanotype made using threads to create the abstract shapes.</p>
