--- a/ajax-lightbox-gallery/asparagus_setaceus.html
+++ b/ajax-lightbox-gallery/asparagus_setaceus.html
@@ -24,7 +24,7 @@
 
     <div class="cbp-l-inline-right">
         <div class="cbp-l-inline-title">Asparagus setaceus</div>
-        <div class="cbp-l-inline-subtitle">Sold</div>
+        <div class="cbp-l-inline-subtitle">sold</div>
 
         <div class="cbp-l-inline-desc">
           <p>This original cyanotype was made from a real plant I collected previously. This is an original print which means there is only one available.</p>
