--- a/ajax-lightbox-gallery/branch.html
+++ b/ajax-lightbox-gallery/branch.html
@@ -19,7 +19,7 @@
 
     <div class="cbp-l-inline-right">
         <div class="cbp-l-inline-title">Branch</div>
-        <div class="cbp-l-inline-subtitle">100€</div>
+        <div class="cbp-l-inline-subtitle">€100</div>
         <div class="cbp-l-inline-desc">
           <p>This original cyanotype was made from a real plant I collected previously. This is a large original print which means there is only one available.</p>
           <p>The cyanotype is a handmade process that involves coating the paper with a light-sensitive emulsion, exposing the print to sunlight or UV light, and then rinsed and dried. Each print is unique and results in different blues and tones variations.</p>
