--- a/ajax-lightbox-gallery/threads_XVI.html
+++ b/ajax-lightbox-gallery/threads_XVI.html
@@ -29,7 +29,7 @@
 
     <div class="cbp-l-inline-right">
         <div class="cbp-l-inline-title">Threads XVI</div>
-        <div class="cbp-l-inline-subtitle">50€</div>
+        <div class="cbp-l-inline-subtitle">€50</div>
 
         <div class="cbp-l-inline-desc">
           <p>Original cyanotype made using threads to create the abstract shapes.</p>
