--- a/gallery/threads_XII.html
+++ b/gallery/threads_XII.html
@@ -19,7 +19,7 @@
 
     <div class="cbp-l-inline-right">
         <div class="cbp-l-inline-title">Threads XII</div>
-        <div class="cbp-l-inline-subtitle">50€</div>
+        <div class="cbp-l-inline-subtitle">€50</div>
 
         <div class="cbp-l-inline-desc">
           <p>Original cyanotype made using threads to create the abstract shapes.</p>
