--- a/gallery/threads_XIV.html
+++ b/gallery/threads_XIV.html
@@ -18,7 +18,7 @@
 
     <div class="cbp-l-inline-right">
         <div class="cbp-l-inline-title">Threads XIV</div>
-        <div class="cbp-l-inline-subtitle">50€</div>
+        <div class="cbp-l-inline-subtitle">€50</div>
 
         <div class="cbp-l-inline-desc">
           <p>Original cyanotype made using threads to create the abstract shapes.</p>
