--- a/cyanotype-process.html
+++ b/cyanotype-process.html
@@ -5,6 +5,7 @@
 		<title>Blau Cianotipia. Cyanotype prints</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="icon" href="/favicon.svg">
 		<!-- load css for cubeportfolio -->
     <link rel="stylesheet" type="text/css" href="css/cubeportfolio.min.css">
 		<link rel="stylesheet" href="css/main.css" />
