remove etsy, change bio.

--- a/about.html
+++ b/about.html
@@ -28,28 +28,28 @@
 					<h1>About me</h1>
 				</header>
 		    <div class="content">
-					<p>My name is <strong>Paula Guagliardi</strong>. I am a designer and a cyanotype artist.</p>
-					<p>The <strong>cyanotype process is an alternative photographic process</strong> that produces a <strong>Prussian</strong> blue print.</p>
-					<p>No kind of ink is used to obtain the image, but it is the <strong>sunlight</strong> that, when coming into contact with the sensitized paper, forms the image due to the chemical reaction.</p>
-					<p>I use <strong>real plants</strong> to make my prints. I collect them by walking around and <strong>looking at what is already there</strong> and is only discovered by <strong>being present</strong>. Lately I have been working with other elements, like threads, exploring the technique deeper.</p>
-					<p>Blau is my homage to the cyanotype process and <strong>Anna Atkins</strong>. It's about nature and complex but yet simple things.</p>
-					<h2 class="subtitle">Shows</h2>
-					<ul >
-						<li><strong>2019</strong>. "Perenne" at Huella Botánica curated by Ether Arts Projects. (Solo show)</li>
-						<li><strong>2018</strong>. "Vivarium" at Huella Botánica curated by Ether Arts Projects. (Group show)</li>
-						<li><strong>2017</strong>. "Naturaleza y cianotipia".(Group show)<br>
+				<p>Paula's cyanotype exploration is about life just as it is, about <strong>nature and simpleness</strong>. Nature makes its appearance in the way she uses plants and how she creates her cyanotypes: by walking around and searching for what it's already there and can only be <strong>discovered by being present</strong>.</p>
+				<p>One of her goals is to play with the limits set by the variability and uncertainty of the technique in order to explore further and to <strong>choose what to capture</strong>, as a form to express how she sees life.</p>
+				<p>Lately, she's been experimenting with those limits by using new materials, like threads. The threads' elusiveness results in fragile and yet complex shapes.</p>
+				<p>The <strong>cyanotype process</strong> is an alternative photographic process that produces a Prussian blue print. The image is obtained as a result of iron salts' sensitivity to light.</p>
+				<p>This makes each cyanotype beautifully <strong>>unique</strong.</p>
+				<h2 class="subtitle">Shows</h2>
+				<ul >
+					<li><strong>2019</strong>. "Perenne" at Huella Botánica curated by Ether Arts Projects. (Solo show)</li>
+					<li><strong>2018</strong>. "Vivarium" at Huella Botánica curated by Ether Arts Projects. (Group show)</li>
+					<li><strong>2017</strong>. "Naturaleza y cianotipia".(Group show)<br>
 							Homage to Anna Atkins.
-								Argentina - México - Chile - Uruguay - Brasil - Ucrania
-								A project by Alejandra Marin and Natalia Monserrat.
-								Curated by: Jorgelina López, Alejandra Marin and Natalia Monserrat.</li>
-						</ul>
-
+							Argentina - México - Chile - Uruguay - Brasil - Ucrania
+							A project by Alejandra Marin and Natalia Monserrat.
+							Curated by: Jorgelina López, Alejandra Marin and Natalia Monserrat.</li>
+				</ul>
 		    </div>
 			</div>
 		</div>
 		<div class="contact">
 			<p><img src="images/icon-envelope.svg" alt="Contact me" class="icon">  Feel free to <a href="mailto:paulagdi@pm.me" class="icon-text" >reach out</a>.</p>
-			<p>You can also follow the project on <a class="icon-text" href="https://www.instagram.com/blau.cianotipia/">Instagram</a> or visit my shop on <a class="icon-text" href="https://www.etsy.com/shop/BlauCianotipia"> Etsy</a>.</p>
+			<p>You can also follow the project on <a class="icon-text" href="https://www.instagram.com/blau.cianotipia/">Instagram</a>.</p>
+			<!-- or visit my shop on <a class="icon-text" href="https://www.etsy.com/shop/BlauCianotipia"> Etsy</a> -->
 		</div>
 
 		<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
