--- a/ajax-lightbox-gallery/gramineae_II.html
+++ b/ajax-lightbox-gallery/gramineae_II.html
@@ -30,7 +30,7 @@
 
     <div class="cbp-l-inline-right">
         <div class="cbp-l-inline-title">Gramineae II</div>
-        <div class="cbp-l-inline-subtitle">€20</div>
+        <div class="cbp-l-inline-subtitle"> </div>
 
         <div class="cbp-l-inline-desc">
           <p>This original cyanotype was made from a real plant I collected previously. This is an original print which means there is only one available.</p>
@@ -44,8 +44,8 @@
           </ul>
         </div>
 
-        <div class="cbp-l-inline-view-wrap">
+        <!-- <div class="cbp-l-inline-view-wrap">
             <a href="https://www.etsy.com/listing/906571533/gramineae-ii-cyanotype-original-art?ref=shop_home_active_8&frs=1" target="_blank" class="cbp-l-inline-view">Purchase</a>
-        </div>
+        </div> -->
     </div>
 </div>
