--- a/cyanotype-process.html
+++ b/cyanotype-process.html
@@ -45,7 +45,8 @@
 		</div>
 		<div class="contact">
 			<p><img src="images/icon-envelope.svg" alt="Contact me" class="icon">  Feel free to <a href="mailto:paulagdi@pm.me" class="icon-text" >reach out</a>.</p>
-			<p>You can also follow the project on <a class="icon-text" href="https://www.instagram.com/blau.cianotipia/">Instagram</a> or visit my shop on <a class="icon-text" href="https://www.etsy.com/shop/BlauCianotipia"> Etsy</a>.</p>
+			<p>You can also follow the project on <a class="icon-text" href="https://www.instagram.com/blau.cianotipia/">Instagram</a>.</p>
+			<!-- or visit my shop on <a class="icon-text" href="https://www.etsy.com/shop/BlauCianotipia"> Etsy</a> -->
 		</div>
 
 		<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
