--- a/gallery/threads_V.html
+++ b/gallery/threads_V.html
@@ -24,8 +24,7 @@
 
     <div class="cbp-l-inline-right">
         <div class="cbp-l-inline-title">Threads V</div>
-        <div class="cbp-l-inline-subtitle">€50</div>
-
+<div class="cbp-l-inline-subtitle"> </div>
         <div class="cbp-l-inline-desc">
           <p>Original cyanotype made using threads to create the abstract shapes.</p>
           <p>The cyanotype is a handmade process that involves coating the paper with a light-sensitive emulsion, exposing the print to sunlight or UV light, and then rinsed and dried. Each print is unique and results in different blues and tones variations.</p>
