--- a/gallery/wetcyan_V.html
+++ b/gallery/wetcyan_V.html
@@ -18,8 +18,7 @@
 
     <div class="cbp-l-inline-right">
         <div class="cbp-l-inline-title">Wet cyanotype V</div>
-        <div class="cbp-l-inline-subtitle">€50</div>
-
+<div class="cbp-l-inline-subtitle"> </div>
         <div class="cbp-l-inline-desc">
           <p>This is a original print which means there is only one available. This cyanotype is made using the wet cyanotype technique.</p>
           <p>The cyanotype is a handmade process that involves coating the paper with a light-sensitive emulsion, exposing the print to sunlight or UV light, and then rinsed and dried. Each print is unique and results in different blues and tones variations.</p>
