--- a/ajax-lightbox-gallery/threads_XVII.html
+++ b/ajax-lightbox-gallery/threads_XVII.html
@@ -18,8 +18,7 @@
 
     <div class="cbp-l-inline-right">
         <div class="cbp-l-inline-title">Threads XVII</div>
-        <div class="cbp-l-inline-subtitle">€50</div>
-
+<div class="cbp-l-inline-subtitle"> </div>
         <div class="cbp-l-inline-desc">
           <p>Original cyanotype made using threads to create the abstract shapes.</p>
           <p>The cyanotype is a handmade process that involves coating the paper with a light-sensitive emulsion, exposing the print to sunlight or UV light, and then rinsed and dried. Each print is unique and results in different blues and tones variations.</p>
@@ -32,8 +31,8 @@
           </ul>
         </div>
 
-        <div class="cbp-l-inline-view-wrap">
+        <!-- <div class="cbp-l-inline-view-wrap">
             <a href="https://www.etsy.com/listing/907294025/threads-cyanotype-original-abstract-art" target="_blank" class="cbp-l-inline-view">Purchase</a>
-        </div>
+        </div> -->
     </div>
 </div>
