--- a/ajax-lightbox-gallery/threads_XXIV.html
+++ b/ajax-lightbox-gallery/threads_XXIV.html
@@ -24,8 +24,7 @@
 
     <div class="cbp-l-inline-right">
         <div class="cbp-l-inline-title">Threads XXIV</div>
-        <div class="cbp-l-inline-subtitle">€50</div>
-
+<div class="cbp-l-inline-subtitle"> </div>
         <div class="cbp-l-inline-desc">
           <p>Original cyanotype made using threads to create the abstract shapes.</p>
           <p>The cyanotype is a handmade process that involves coating the paper with a light-sensitive emulsion, exposing the print to sunlight or UV light, and then rinsed and dried. Each print is unique and results in different blues and tones variations.</p>
@@ -38,8 +37,8 @@
           </ul>
         </div>
 
-        <div class="cbp-l-inline-view-wrap">
+        <!-- <div class="cbp-l-inline-view-wrap">
             <a href="https://www.etsy.com/listing/893370348/threads-cyanotype-original-abstract-art?ref=shop_home_active_7&frs=1" target="_blank" class="cbp-l-inline-view">Purchase</a>
-        </div>
+        </div> -->
     </div>
 </div>
