--- a/ajax-lightbox-gallery/wetcyan_VIII.html
+++ b/ajax-lightbox-gallery/wetcyan_VIII.html
@@ -13,7 +13,7 @@
 
     <div class="cbp-l-inline-right">
         <div class="cbp-l-inline-title">Wet cyanotype VIII</div>
-        <div class="cbp-l-inline-subtitle">€35</div>
+        <div class="cbp-l-inline-subtitle"> </div>
 
         <div class="cbp-l-inline-desc">
           <p>This is a original print which means there is only one available. This cyanotype is made using the wet cyanotype technique.</p>
@@ -27,8 +27,8 @@
           </ul>
         </div>
 
-        <div class="cbp-l-inline-view-wrap">
+        <!-- <div class="cbp-l-inline-view-wrap">
             <a href="https://www.etsy.com/listing/893055972/wet-cyanotype-original-art-wetcyan?ref=shop_home_active_33&frs=1" target="_blank" class="cbp-l-inline-view">Purchase</a>
-        </div>
+        </div> -->
     </div>
 </div>
