fixed url gallery

--- a/2-ajax-lightbox-gallery/threads_VI.html
+++ b/2-ajax-lightbox-gallery/threads_VI.html
@@ -3,14 +3,19 @@
         <div class="cbp-slider">
             <ul class="cbp-slider-wrap">
                 <li class="cbp-slider-item">
-                    <a href="images/botanical/branch-50x65-2019_prod.jpg" class="cbp-lightbox">
-                        <img src="images/botanical/branch-50x65-2019_prod-thumb.jpg" alt="Branch - Botanical Collection">
+                    <a href="images/summer/threads_VI_a3_2020_prod.jpg" class="cbp-lightbox">
+                        <img src="images/summer/threads_VI_a3_2020_prod-thumb.jpg" alt="">
                     </a>
                     <span class="photoCopy">Photo by <a href="https://www.instagram.com/fibh.photo/" target="_blank">Fenne Buitenrust Hettema</a></span>
                 </li>
                 <li class="cbp-slider-item">
-                    <a href="images/botanical/branch-50x65-2019.jpg" class="cbp-lightbox">
-                        <img src="images/botanical/branch-50x65-2019-thumb.jpg" alt="Branch - Botanical Collection">
+                    <a href="images/summer/threads_VI_a3_2020_framed.jpg" class="cbp-lightbox">
+                        <img src="images/summer/threads_VI_a3_2020_framed-thumb.jpg" alt="Threads VI - The summer of Threads collection">
+                    </a>
+                </li>
+                <li class="cbp-slider-item">
+                    <a href="images/summer/threads_VI_a3_2020.jpg" class="cbp-lightbox">
+                        <img src="images/summer/threads_VI_a3_2020-thumb.jpg" alt="Threads VI - The summer of Threads collection">
                     </a>
                 </li>
             </ul>
@@ -18,22 +23,21 @@
     </div>
 
     <div class="cbp-l-inline-right">
-        <div class="cbp-l-inline-title">Branch</div>
-        <div class="cbp-l-inline-subtitle"></div>
+        <div class="cbp-l-inline-title">Threads VI</div>
+<div class="cbp-l-inline-subtitle"> </div>
         <div class="cbp-l-inline-desc">
-          <p>This original cyanotype was made from a real plant I collected previously. This is a large original print which means there is only one available.</p>
+          <p>Original cyanotype made using threads to create the abstract shapes.</p>
           <p>The cyanotype is a handmade process that involves coating the paper with a light-sensitive emulsion, exposing the print to sunlight or UV light, and then rinsed and dried. Each print is unique and results in different blues and tones variations.</p>
           <p>Cyanotype's details:</p>
           <ul>
-            <li>Width: 50cm Height:60 cm (19.6 x 23.6 in.)</li>
+            <li>Width: 29,7cm Height: 42cm (11.7 × 16.5 in.)</li>
             <li>300 gr. acid-free watercolor paper.</li>
             <li>The cyanotype is signed and dated.</li>
             <li>Frame Not Included</li>
           </ul>
         </div>
-
         <!-- <div class="cbp-l-inline-view-wrap">
-            <a href="#" target="_blank" class="cbp-l-inline-view">Purchase</a>
+            <a href="https://www.etsy.com/listing/907288661/threads-cyanotype-original-abstract-art" target="_blank" class="cbp-l-inline-view">Purchase</a>
         </div> -->
     </div>
 </div>
