--- a/gallery/cedrus_deodara.html
+++ b/gallery/cedrus_deodara.html
@@ -19,7 +19,7 @@
 
     <div class="cbp-l-inline-right">
         <div class="cbp-l-inline-title">Cedrus deodaras</div>
-        <div class="cbp-l-inline-subtitle">€100</div>
+        <div class="cbp-l-inline-subtitle"></div>
 
         <div class="cbp-l-inline-desc">
           <p>This original cyanotype was made from a real plant I collected previously. This is a large original print which means there is only one available.</p>
@@ -33,8 +33,8 @@
           </ul>
         </div>
 
-        <div class="cbp-l-inline-view-wrap">
+        <!-- <div class="cbp-l-inline-view-wrap">
             <a href="#" target="_blank" class="cbp-l-inline-view">Purchase</a>
-        </div>
+        </div> -->
     </div>
 </div>
