--- a/gallery/wetcyan_II.html
+++ b/gallery/wetcyan_II.html
@@ -24,7 +24,7 @@
 
     <div class="cbp-l-inline-right">
         <div class="cbp-l-inline-title">Wet cyanotype II</div>
-        <div class="cbp-l-inline-subtitle">€100</div>
+        <div class="cbp-l-inline-subtitle"></div>
 
         <div class="cbp-l-inline-desc">
           <p>This is a large original print which means there is only one available. This cyanotype is made using the wet cyanotype technique.</p>
@@ -38,8 +38,8 @@
           </ul>
         </div>
 
-        <div class="cbp-l-inline-view-wrap">
+        <!-- <div class="cbp-l-inline-view-wrap">
             <a href="https://www.etsy.com/listing/906602795/wet-cyanotype-original-art-wetcyan" target="_blank" class="cbp-l-inline-view">Purchase</a>
-        </div>
+        </div> -->
     </div>
 </div>
