--- a/gallery/wetcyan_VIII.html
+++ b/gallery/wetcyan_VIII.html
@@ -13,7 +13,7 @@
 
     <div class="cbp-l-inline-right">
         <div class="cbp-l-inline-title">Wet cyanotype VIII</div>
-        <div class="cbp-l-inline-subtitle">€35</div>
+        <div class="cbp-l-inline-subtitle"></div>
 
         <div class="cbp-l-inline-desc">
           <p>This is a original print which means there is only one available. This cyanotype is made using the wet cyanotype technique.</p>
