--- a/2-ajax-lightbox-gallery/threads_IV.html
+++ b/2-ajax-lightbox-gallery/threads_IV.html
@@ -3,19 +3,19 @@
         <div class="cbp-slider">
             <ul class="cbp-slider-wrap">
                 <li class="cbp-slider-item">
-                    <a href="images/summer/threads_VI_a3_2020_prod.jpg" class="cbp-lightbox">
-                        <img src="images/summer/threads_VI_a3_2020_prod-thumb.jpg" alt="">
+                    <a href="images/summer/threads_IV_a3_2020_prod.jpg" class="cbp-lightbox">
+                        <img src="images/summer/threads_IV_a3_2020_prod-thumb.jpg" alt="">
                     </a>
                     <span class="photoCopy">Photo by <a href="https://www.instagram.com/fibh.photo/" target="_blank">Fenne Buitenrust Hettema</a></span>
                 </li>
                 <li class="cbp-slider-item">
-                    <a href="images/summer/threads_VI_a3_2020_framed.jpg" class="cbp-lightbox">
-                        <img src="images/summer/threads_VI_a3_2020_framed-thumb.jpg" alt="Threads VI - The summer of Threads collection">
+                    <a href="images/summer/threads_IV_a3_2020_framed.jpg" class="cbp-lightbox">
+                        <img src="images/summer/threads_IV_a3_2020_framed-thumb.jpg" alt="Threads I - The summer of Threads collection">
                     </a>
                 </li>
                 <li class="cbp-slider-item">
-                    <a href="images/summer/threads_VI_a3_2020.jpg" class="cbp-lightbox">
-                        <img src="images/summer/threads_VI_a3_2020-thumb.jpg" alt="Threads VI - The summer of Threads collection">
+                    <a href="images/summer/threads_IV_a3_2020.jpg" class="cbp-lightbox">
+                        <img src="images/summer/threads_IV_a3_2020-thumb.jpg" alt="Threads I - The summer of Threads collection">
                     </a>
                 </li>
             </ul>
@@ -23,8 +23,9 @@
     </div>
 
     <div class="cbp-l-inline-right">
-        <div class="cbp-l-inline-title">Threads VI</div>
-<div class="cbp-l-inline-subtitle"> </div>
+        <div class="cbp-l-inline-title">Threads IV</div>
+        <div class="cbp-l-inline-subtitle">sold</div>
+
         <div class="cbp-l-inline-desc">
           <p>Original cyanotype made using threads to create the abstract shapes.</p>
           <p>The cyanotype is a handmade process that involves coating the paper with a light-sensitive emulsion, exposing the print to sunlight or UV light, and then rinsed and dried. Each print is unique and results in different blues and tones variations.</p>
@@ -36,9 +37,9 @@
             <li>Frame Not Included</li>
           </ul>
         </div>
-<!-- 
-        <div class="cbp-l-inline-view-wrap">
-            <a href="https://www.etsy.com/listing/907288661/threads-cyanotype-original-abstract-art" target="_blank" class="cbp-l-inline-view">Purchase</a>
+
+        <!-- <div class="cbp-l-inline-view-wrap">
+            <a href="#" target="_blank" class="cbp-l-inline-view">Purchase</a>
         </div> -->
     </div>
 </div>
