--- a/2-ajax-lightbox-gallery/threads_XXVI.html
+++ b/2-ajax-lightbox-gallery/threads_XXVI.html
@@ -3,19 +3,13 @@
         <div class="cbp-slider">
             <ul class="cbp-slider-wrap">
                 <li class="cbp-slider-item">
-                    <a href="images/summer/threads_IV_a3_2020_prod.jpg" class="cbp-lightbox">
-                        <img src="images/summer/threads_IV_a3_2020_prod-thumb.jpg" alt="">
-                    </a>
-                    <span class="photoCopy">Photo by <a href="https://www.instagram.com/fibh.photo/" target="_blank">Fenne Buitenrust Hettema</a></span>
-                </li>
-                <li class="cbp-slider-item">
-                    <a href="images/summer/threads_IV_a3_2020_framed.jpg" class="cbp-lightbox">
-                        <img src="images/summer/threads_IV_a3_2020_framed-thumb.jpg" alt="Threads I - The summer of Threads collection">
+                    <a href="images/summer/threads_XXVI_a3_2020_framed.jpg" class="cbp-lightbox">
+                        <img src="images/summer/threads_XXVI_a3_2020_framed-thumb.jpg" alt="Threads VI - The summer of Threads collection">
                     </a>
                 </li>
                 <li class="cbp-slider-item">
-                    <a href="images/summer/threads_IV_a3_2020.jpg" class="cbp-lightbox">
-                        <img src="images/summer/threads_IV_a3_2020-thumb.jpg" alt="Threads I - The summer of Threads collection">
+                    <a href="images/summer/threads_XXVI_a3_2020.jpg" class="cbp-lightbox">
+                        <img src="images/summer/threads_XXVI_a3_2020-thumb.jpg" alt="Threads VI - The summer of Threads collection">
                     </a>
                 </li>
             </ul>
@@ -23,7 +17,7 @@
     </div>
 
     <div class="cbp-l-inline-right">
-        <div class="cbp-l-inline-title">Threads IV</div>
+        <div class="cbp-l-inline-title">Threads XXVI</div>
         <div class="cbp-l-inline-subtitle">sold</div>
 
         <div class="cbp-l-inline-desc">
@@ -38,8 +32,8 @@
           </ul>
         </div>
 
-        <div class="cbp-l-inline-view-wrap">
-            <!-- <a href="#" target="_blank" class="cbp-l-inline-view">Purchase</a> -->
-        </div>
+        <!-- <div class="cbp-l-inline-view-wrap">
+            <a href="#" target="_blank" class="cbp-l-inline-view">Purchase</a>
+        </div> -->
     </div>
 </div>
