--- a/gallery/schinus_areira.html
+++ b/gallery/schinus_areira.html
@@ -31,8 +31,8 @@
           </ul>
         </div>
 
-        <div class="cbp-l-inline-view-wrap">
-            <!-- <a href="#" target="_blank" class="cbp-l-inline-view">Purchase</a> -->
-        </div>
+        <!-- <div class="cbp-l-inline-view-wrap">
+            <a href="#" target="_blank" class="cbp-l-inline-view">Purchase</a>
+        </div> -->
     </div>
 </div>
