--- a/gallery/small_branch.html
+++ b/gallery/small_branch.html
@@ -19,7 +19,7 @@
 
     <div class="cbp-l-inline-right">
         <div class="cbp-l-inline-title">Small Branch</div>
-        <div class="cbp-l-inline-subtitle">€35</div>
+        <div class="cbp-l-inline-subtitle"></div>
 
         <div class="cbp-l-inline-desc">
           <p>This original cyanotype was made from a real plant I collected previously. This is an original print which means there is only one available.</p>
@@ -32,9 +32,8 @@
             <li>Frame Not Included</li>
           </ul>
         </div>
-
-        <div class="cbp-l-inline-view-wrap">
+        <!-- <div class="cbp-l-inline-view-wrap">
             <a href="https://www.etsy.com/listing/892574816/small-branch-cyanotype-original-art" target="_blank" class="cbp-l-inline-view">Purchase</a>
-        </div>
+        </div> -->
     </div>
 </div>
