--- a/gallery/threads_XII.html
+++ b/gallery/threads_XII.html
@@ -32,8 +32,8 @@
           </ul>
         </div>
 
-        <div class="cbp-l-inline-view-wrap">
+        <!-- <div class="cbp-l-inline-view-wrap">
             <a href="https://www.etsy.com/listing/893363032/threads-cyanotype-original-abstract-art" target="_blank" class="cbp-l-inline-view">Purchase</a>
-        </div>
+        </div> -->
     </div>
 </div>
