--- a/gallery/threads_XVI.html
+++ b/gallery/threads_XVI.html
@@ -42,8 +42,8 @@
           </ul>
         </div>
 
-        <div class="cbp-l-inline-view-wrap">
+        <!-- <div class="cbp-l-inline-view-wrap">
             <a href="https://www.etsy.com/listing/907293249/threads-cyanotype-original-abstract-art" target="_blank" class="cbp-l-inline-view">Purchase</a>
-        </div>
+        </div> -->
     </div>
 </div>
