--- a/gallery/threads_XXIV.html
+++ b/gallery/threads_XXIV.html
@@ -37,8 +37,8 @@
           </ul>
         </div>
 
-        <div class="cbp-l-inline-view-wrap">
+        <!-- <div class="cbp-l-inline-view-wrap">
             <a href="https://www.etsy.com/listing/893370348/threads-cyanotype-original-abstract-art?ref=shop_home_active_7&frs=1" target="_blank" class="cbp-l-inline-view">Purchase</a>
-        </div>
+        </div> -->
     </div>
 </div>
