--- a/gallery/threads_XXVI.html
+++ b/gallery/threads_XXVI.html
@@ -32,8 +32,8 @@
           </ul>
         </div>
 
-        <div class="cbp-l-inline-view-wrap">
+        <!-- <div class="cbp-l-inline-view-wrap">
             <!-- <a href="#" target="_blank" class="cbp-l-inline-view">Purchase</a> -->
-        </div>
+        </div> -->
     </div>
 </div>
