--- a/gallery/weeds_I.html
+++ b/gallery/weeds_I.html
@@ -32,9 +32,9 @@
           </ul>
         </div>
 
-        <div class="cbp-l-inline-view-wrap">
+        <!-- <div class="cbp-l-inline-view-wrap">
           <br>
-            <!-- <a href="#" target="_blank" class="cbp-l-inline-view">Purchase</a> -->
-        </div>
+            <a href="#" target="_blank" class="cbp-l-inline-view">Purchase</a>
+        </div> -->
     </div>
 </div>
