--- a/gallery/wetcyan_I.html
+++ b/gallery/wetcyan_I.html
@@ -18,7 +18,7 @@
 
     <div class="cbp-l-inline-right">
         <div class="cbp-l-inline-title">Wet cyanotype I</div>
-        <div class="cbp-l-inline-subtitle">€100</div>
+        <div class="cbp-l-inline-subtitle"></div>
 
         <div class="cbp-l-inline-desc">
           <p>This is a large original print which means there is only one available. This cyanotype is made using the wet cyanotype technique.</p>
@@ -32,8 +32,8 @@
           </ul>
         </div>
 
-        <div class="cbp-l-inline-view-wrap">
+        <!-- <div class="cbp-l-inline-view-wrap">
             <a href="https://www.etsy.com/listing/906601509/wet-cyanotype-original-art-wetcyan" target="_blank" class="cbp-l-inline-view">Purchase</a>
-        </div>
+        </div> -->
     </div>
 </div>
