--- a/gallery/wetcyan_V.html
+++ b/gallery/wetcyan_V.html
@@ -31,8 +31,8 @@
           </ul>
         </div>
 
-        <div class="cbp-l-inline-view-wrap">
+        <!-- <div class="cbp-l-inline-view-wrap">
             <a href="https://www.etsy.com/listing/906624269/wet-cyanotype-original-art-wetcyan" target="_blank" class="cbp-l-inline-view">Purchase</a>
-        </div>
+        </div> -->
     </div>
 </div>
