Change title about

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 
 				<!-- <header class="contentHeader clearfix"> -->
 				<header class="contentHeader">
-					<h1>About me</h1>
+					<h1>About</h1>
 				</header>
 		    <div class="content">
 				<p>Paula's cyanotype exploration is about life just as it is, about <strong>nature and simpleness</strong>. Nature makes its appearance in the way she uses plants and how she creates her cyanotypes: by walking around and searching for what it's already there and can only be <strong>discovered by being present</strong>.</p>
