Remove html from url

--- a/about/index.html
+++ b/about/index.html
@@ -17,8 +17,8 @@
 				<!-- <h2>Paula Guagliardi</h2> -->
 				<ul class="mainNav">
 					<li><a href="index.html">Cyanotypes</a></li>
-					<li><a href="cyanotype-process.html">The Cyanotype Process</a></li>
-					<li><a href="about.html" class="active">About</a></li>
+					<li><a href="#">The Cyanotype Process</a></li>
+					<li><a href="about/index.html" class="active">About</a></li>
 				</ul>
 			</nav>
 			<div class="mainContent">
@@ -32,7 +32,7 @@
 				<p>One of her goals is to play with the limits set by the variability and uncertainty of the technique in order to explore further and to <strong>choose what to capture</strong>, as a form to express how she sees life.</p>
 				<p>Lately, she's been experimenting with those limits by using new materials, like threads. The threads' elusiveness results in fragile and yet complex shapes.</p>
 				<p>The <strong>cyanotype process</strong> is an alternative photographic process that produces a Prussian blue print. The image is obtained as a result of iron salts' sensitivity to light.</p>
-				<p>This makes each cyanotype beautifully <strong>>unique</strong.</p>
+				<p>This makes each cyanotype beautifully <strong>unique</strong>.</p>
 				<h2 class="subtitle">Shows</h2>
 				<ul >
 					<li><strong>2019</strong>. "Perenne" at Huella Botánica curated by Ether Arts Projects. (Solo show)</li>
