--- a/cyanotype-process/index.html
+++ b/cyanotype-process/index.html
@@ -18,7 +18,7 @@
 				<ul class="mainNav">
 					<li><a href="index.html">Cyanotypes</a></li>
 					<li><a href="#" class="active">The Cyanotype Process</a></li>
-					<li><a href="about.html">About</a></li>
+					<li><a href="about/index.html">About</a></li>
 				</ul>
 			</nav>
 			<div class="mainContent">
