--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<!-- <h2>Paula Guagliardi</h2> -->
 			<ul class="mainNav">
 				<li><a href="index.html" class="active">Cyanotypes</a></li>
-				<li><a href="cyanotype-process.html">The Cyanotype Process</a></li>
-				<li><a href="about.html">About</a></li>
+				<li><a href="cyanotype-process/index.html">The Cyanotype Process</a></li>
+				<li><a href="about/index.html">About</a></li>
 			</ul>
 		</nav>
 		<div class="mainContent">
