--- a/about/index.html
+++ b/about/index.html
@@ -7,18 +7,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="icon" href="/favicon.svg">
 		<!-- load css for cubeportfolio -->
-    <link rel="stylesheet" type="text/css" href="css/cubeportfolio.min.css">
-		<link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="/css/cubeportfolio.min.css">
+		<link rel="stylesheet" href="/css/main.css" />
 	</head>
 	<body>
 		<div class="parent">
 			<nav class="sidebar">
-				<h1 class="logo"><a href="index.html"><img src="images/logo-blau.svg" alt="Blau Cianotipia"></a></h1>
+				<h1 class="logo"><a href="/"><img src="/images/logo-blau.svg" alt="Blau Cianotipia"></a></h1>
 				<!-- <h2>Paula Guagliardi</h2> -->
 				<ul class="mainNav">
-					<li><a href="index.html">Cyanotypes</a></li>
-					<li><a href="#">The Cyanotype Process</a></li>
-					<li><a href="about/index.html" class="active">About</a></li>
+					<li><a href="/">Cyanotypes</a></li>
+					<li><a href="/cyanotype-process/">The Cyanotype Process</a></li>
+					<li><a href="/about" class="active">About</a></li>
 				</ul>
 			</nav>
 			<div class="mainContent">
@@ -47,16 +47,15 @@
 			</div>
 		</div>
 		<div class="contact">
-			<p><img src="images/icon-envelope.svg" alt="Contact me" class="icon">  Feel free to <a href="mailto:paulagdi@pm.me" class="icon-text" >reach out</a>.</p>
+			<p><img src="/images/icon-envelope.svg" alt="Contact me" class="icon">  Feel free to <a href="mailto:paulagdi@pm.me" class="icon-text" >reach out</a>.</p>
 			<p>You can also follow the project on <a class="icon-text" href="https://www.instagram.com/blau.cianotipia/">Instagram</a>.</p>
 			<!-- or visit my shop on <a class="icon-text" href="https://www.etsy.com/shop/BlauCianotipia"> Etsy</a> -->
 		</div>
 
 		<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
     <!-- load cubeportfolio -->
-    <script type="text/javascript" src="js/jquery.cubeportfolio.min.js"></script>
+    <script type="text/javascript" src="/js/jquery.cubeportfolio.min.js"></script>
     <!-- init cubeportfolio -->
-    <script type="text/javascript" src="js/main.js"></script>
-
+    <script type="text/javascript" src="/js/main.js"></script>
 	</body>
 </html>
