--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="icon" href="/favicon.svg">
 	<!-- load css for cubeportfolio -->
-	<link rel="stylesheet" type="text/css" href="css/cubeportfolio.min.css">
-	<link rel="stylesheet" href="css/main.css" />
+	<link rel="stylesheet" type="text/css" href="/css/cubeportfolio.min.css">
+	<link rel="stylesheet" href="/css/main.css" />
 </head>
 <body>
 	<div class="parent">
 		<nav class="sidebar">
-			<h1 class="logo"><a href="index.html"><img src="images/logo-blau.svg" alt="Blau Cianotipia"></a></h1>
+			<h1 class="logo"><a href="/"><img src="images/logo-blau.svg" alt="Blau Cianotipia"></a></h1>
 			<!-- <h2>Paula Guagliardi</h2> -->
 			<ul class="mainNav">
-				<li><a href="index.html" class="active">Cyanotypes</a></li>
-				<li><a href="cyanotype-process/index.html">The Cyanotype Process</a></li>
-				<li><a href="about/index.html">About</a></li>
+				<li><a href="/" class="active">Cyanotypes</a></li>
+				<li><a href="/cyanotype-process/">The Cyanotype Process</a></li>
+				<li><a href="/about/">About</a></li>
 			</ul>
 		</nav>
 		<div class="mainContent">
@@ -753,9 +753,9 @@
 		
 		<script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
 		<!-- load cubeportfolio -->
-		<script type="text/javascript" src="js/jquery.cubeportfolio.min.js"></script>
+		<script type="text/javascript" src="/js/jquery.cubeportfolio.min.js"></script>
 		<!-- init cubeportfolio -->
-		<script type="text/javascript" src="js/main.js"></script>
+		<script type="text/javascript" src="/js/main.js"></script>
 		
 	</body>
 	</html>
