add link to artsper on sidebar

--- a/cyanotype-process/index.html
+++ b/cyanotype-process/index.html
@@ -44,8 +44,8 @@
 			</div>
 		</div>
 		<div class="contact">
-			<p><img src="/images/icon-envelope.svg" alt="Contact me" class="icon">  Feel free to <a href="mailto:paulagdi@pm.me" class="icon-text" >reach out</a>.</p>
-			<p>You can also follow the project on <a class="icon-text" href="https://www.instagram.com/blau.cianotipia/">Instagram</a>.</p>
+			<p>You can see some available work on my <a href="https://www.artsper.com/fr/contemporary-artists/argentina/80970/paula-guagliardi" class="icon-text" target="_blank">Artsper profile</a>. </p>
+			<p><img src="images/icon-envelope.svg" alt="Contact me" class="icon">  Feel free to <a href="mailto:paulagdi@pm.me" class="icon-text" >reach out</a>.<br>You can also follow the project on <a class="icon-text" href="https://www.instagram.com/blau.cianotipia/" target="_blank">Instagram</a>.</p>
 			<!-- or visit my shop on <a class="icon-text" href="https://www.etsy.com/shop/BlauCianotipia"> Etsy</a> -->
 		</div>
 
